Adjustments on mobile navigation and minor bug fixes
- Removed the resizing fallback on navigation.js: all the resizes
related to the navigation are now handled through CSS instead of JS

- Class .centered does not require anymore to be used together with
.fnone on floating objects, such as grid columns: in this cases, this
class will also remove the float properties from the object

- Styles from .screen-cover has been moved from base.css to
navigation.css for a better componentization and code structure

- A fix to the page without scrolling after resizing it while the mobile
navigation was still active has been added to navigation.css

--- a/assets/css/src/base.css
+++ b/assets/css/src/base.css
@@ -13,7 +13,8 @@
 }
 
 .fnone,
-.vcenter {
+.vcenter,
+.centered {
     float: none;
 }
 
@@ -335,11 +336,6 @@ hr {
     border-radius: 50%;
 }
 
-.screen-cover {
-    background-color: rgb(29, 29, 29);
-    background-color: rgba(29, 29, 29, 0.7);
-}
-
 .btn,
 input,
 select,
@@ -378,6 +374,7 @@ textarea,
         top: -9999px;
         visibility: hidden;
     }
+
 }
 
 /*======================= SMALL/SM RESOLUTIONS =======================*/
